--- a/style.css
+++ b/style.css
@@ -17,3 +17,13 @@
   font-size: 25px;
   text-decoration: none;
 }
+
+/*slider_style*/
+
+.slider_img img{
+    float: left;
+    width: 24%;
+    height: 300px;
+    border: 5px red;
+    padding: 5px;
+}
