--- a/style.css
+++ b/style.css
@@ -26,4 +26,14 @@
     height: 300px;
     border: 5px red;
     padding: 5px;
+    display: block;
+    
+}
+
+/*contern style*/
+
+.content p {
+    font-size: 25px;
+    padding: 50px;
+    margin: 20px;
 }
