--- a/style.css
+++ b/style.css
@@ -19,11 +19,18 @@
 }
 
 /*slider_style*/
-
+.slider_conten {
+    display: flow-root;
+}
 .slider_img img{
     float: left;
     width: 24%;
     height: 300px;
     border: 5px red;
     padding: 5px;
+    overflow: auto;
+    display: flow-root
 }
+
+
+
